<resources>
    <string name="app_name">MyNews</string>

    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="most_popular_item_image">Most Popular Item Image</string>
    <string name="main_item_image">Main Item Image</string>
    <string name="search_news_item_image">Search News Item Image</string>
    <string name="search_query_term">Search query term</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="travel">Travel</string>
    <string name="world">World</string>
    <string name="search">Search</string>
    <string name="enable_notifications">Enable notifications (once per day)</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="detailed_notification">A new news article is available</string>
    <string name="there_are_no_search_results_please_try_searching">There are no search results. Please try searching!</string>
    <string name="there_were_no_search_results_please_try_searching_again_with_a_different_keyword">There were no search results. Please try searching again with a different keyword!</string>
</resources>
