<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation = "vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="59dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_query_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_query_term" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/begin_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/begin_date" />

            <TextView
                android:id="@+id/end_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/begin_date"
                android:autofillHints="@string/begin_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_weight="1"
                android:ems="10"
                android:labelFor="@+id/begin_date"/>

            <EditText
                android:id="@+id/end_date"
                android:autofillHints="@string/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_weight="1"
                android:ems="10"
                android:labelFor="@+id/end_date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="91dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="84dp"
                android:orientation="vertical"
                android:layout_marginEnd="15dp">

                <CheckBox
                    android:id="@+id/arts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arts" />

                <CheckBox
                    android:id="@+id/business"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/business" />

                <CheckBox
                    android:id="@+id/entrepreneurs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entrepreneurs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="15dp">

                <CheckBox
                    android:id="@+id/politics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/politics" />

                <CheckBox
                    android:id="@+id/science"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/science" />

                <CheckBox
                    android:id="@+id/sports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/technology"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/technology" />

                <CheckBox
                    android:id="@+id/travel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/travel" />

                <CheckBox
                    android:id="@+id/world"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/world" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/search" />

        <Switch
            android:id="@+id/notifications_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_notifications"
            android:checked = "false"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>